--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-picker/picker": "^2.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "axios": "^0.26.1",
     "i18next": "^21.6.13",
     "react": "17.0.2",
     "react-i18next": "^11.15.6",
